# RainbowDAO-Protocol-Ink-Test-Version-05

./: README.md
authority_management/: Cargo.toml  lib.rs
core/: Cargo.toml  lib.rs
daoGovnance/: Cargo.toml  lib.rs
daoVault/: Cargo.toml  lib.rs
daoVote/: Cargo.toml  lib.rs
dao_base/: Cargo.toml  lib.rs
dao_category/: Cargo.toml  lib.rs
dao_factory/: Cargo.toml  lib.rs
dao_govnance/: Cargo.toml  lib.rs
dao_manager/: Cargo.toml  lib.rs
dao_users/: Cargo.toml  lib.rs
dao_vault/: Cargo.toml  lib.rs
dao_vote/: Cargo.toml  lib.rs
erc20/: Cargo.toml  lib.rs
erc20_factory/: Cargo.toml  lib.rs
incomeCategory/: Cargo.toml  lib.rs
income_category/: Cargo.toml  lib.rs
multiSignManage/: Cargo.toml  lib.rs
multi_sign/: Cargo.toml  lib.rs
rainbow_govnance/: lib.rs
role_manage/: Cargo.toml
route_manage/: Cargo.toml  lib.rs
template_manager/: Cargo.toml  lib.rs
test1/src/: main.rs
